--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             </div>
         </div>
     </div>
+
+    <audio id="foodSound" src="./assets/sounds/Food-Eaten.mp3"></audio>
+    <audio id="scoreSound" src="./assets/sounds/Level-Up.mp3"></audio>
     
     
 
