--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game - SaolGhra</title>
+    <meta name="description" content="Snake Game - SaolGhra">
+    <meta name="keywords" content="Spencer Bullock, Portfolio, Web Development, Full-Stack, Software Engineer, HTML, CSS, Python, Java, JavaScript, C#, C++, Kotlin, App Development, Web Development, Snake, Video Game, Gaming, Game, Snake Game">
+    <meta name="author" content="Spencer Bullock">
+    <meta name="theme-color" content="#32a0ac">
+    <link rel="icon" href="/assets/icon.png">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
