--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="close">&times;</span>
             <h2>Controls</h2>
             <div>
-                <p>Use <strong>W</strong>, <strong>A</strong>, <strong>S</strong>, <strong>D</strong> or <strong>arrow keys</strong> to move the snake.</p>
+                <p>Use <strong>W</strong>, <strong>A</strong>, <strong>S</strong>, <strong>D</strong> or <strong>arrow keys</strong> to move the snake. (Tip: Press R To Restart)</p>
                 <p><img src="./assets/up_arrow_image.png" alt="Up Arrow"> - Move Up</p>
                 <p><img src="./assets/down_arrow_image.png" alt="Down Arrow"> - Move Down</p>
                 <p><img src="./assets/left_arrow_image.png" alt="Left Arrow"> - Move Left</p>
